# SHP

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: demo.fa  gene_matrix_sample.csv
docs/: DATA.md  METHOD.md  REPRODUCIBILITY.md
paper/: abstract.txt  figure_captions.md  preprint_v1.md
paper/scripts/: make_paper_figures.py
results/: biological_calibration.csv  calibration_dim_percentile_v2.json  calibration_summary.json  demo_scan.tsv  gene_matrix.csv
scripts/: calibrate_params.py  lru_codex.py  lru_dual_stream.py  lru_reverse_ablation.py  lru_test.py  shp_lru_dna.py
src/shp/: __init__.py  __main__.py  cli.py  core.py
