[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shp"
version = "0.1.0"
description = "Calibrated structural readout for symbolic biological sequences"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jackey L. Gene", email = "jackey.l.gene@outlook.com" }
]
keywords = ["bioinformatics", "sequence-analysis", "genomics", "symbolic-dynamics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.optional-dependencies]
paper = ["matplotlib", "numpy"]
test = ["pytest"]

[project.scripts]
shp = "shp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
